# CmakeDemo

./: .CMakeLists.txt.swp  CMakeLists.txt  hello  hello.cpp  main  main.cpp
hello/: CMakeLists.txt  hello1.cpp  hello1.h
tests/: CMakeLists.txt  test_hello.cpp
world/: CMakeLists.txt  world.cpp  world.h
